incluido mongo no .env

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/reclamacoes
+MONGODB_URI=mongodb+srv://erickarte:backreclamacao@backreclamacao.dv3vjaw.mongodb.net/
 PORT=3000
